--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     </section>
 
     <!-- Top Collections Section -->
-<section class="bg-black pt-2 pb-6 lg:py-20 relative">
+<section class="bg-black pt-2 pb-6 lg:pt-8 lg:pb-20 relative">
     <!-- Heading Area with Shadow -->
     <div class="relative">
         <!-- White Shadow from bottom left -->
@@ -360,7 +360,7 @@
 </section>
 
 <!-- Top Creators Section -->
-<section class="bg-black py-12 lg:py-20 relative">
+<section class="bg-black py-12 lg:pt-8 lg:pb-20 relative">
     <!-- Heading Area with Shadow -->
     <div class="relative">
         <!-- White Shadow from top right -->
